
[profile.release]
debug = true

[workspace]
resolver = "2"

members = [
	"ofps",
	"ofps-suite",
	"motion-loader",
	"motion-extract",
	"motion-analyser",
	"flow-extract",
	"mvec-av",
	"mvec-cv",
	"ptrplus",
	"libmv-rust",
	"almeida-estimator",
	"libmv-estimator",
	"multiview-estimator",
]

default-members = [
	"ofps",
	"ofps-suite",
	"motion-loader",
	"motion-extract",
	"motion-analyser",
	"flow-extract",
	"mvec-av",
	"mvec-cv",
	"libmv-rust",
	"almeida-estimator",
	"libmv-estimator",
	"multiview-estimator",
]

