
[profile.release]
debug = true

[workspace]
resolver = "2"

members = [
	"ofps",
	"ofps-suite",
	"motion-loader",
	"motion-extract",
	"flow-extract",
	"av-decoder",
	"cv-decoder",
	"libmv-rust",
	"almeida-estimator",
	"libmv-estimator",
	"multiview-estimator",
	"homography-estimator",
	"block-motion-detector",
	"wimrend",
]

default-members = [
	"ofps",
	"ofps-suite",
	"motion-loader",
	"motion-extract",
	"flow-extract",
	"av-decoder",
	"cv-decoder",
	#"libmv-rust",
	"almeida-estimator",
	#"libmv-estimator",
	"multiview-estimator",
	"homography-estimator",
	"block-motion-detector",
	"wimrend",
]

