[package]
name = "almeida-estimator"
version = "0.1.0"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
description = "Improved OFPS implementation of robust camera position estimator paper by Almeida et. al"
documentation = "https://docs.rs/almeida-estimator"
repository = "https://github.com/h33p/ofps"
license = "MIT"
keywords = [ "ofps", "vision", "motion", "optical", "almeida" ]
categories = [ "computer-vision", "science", "algorithms" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ofps = { version = "0.1", path = "../ofps" }
nalgebra = "0.30"
rand = "0.8"
