[package]
name = "av-decoder"
version = "0.1.1"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
description = "Extracts OFPS compatible motion vectors from MPEG streams"
documentation = "https://docs.rs/av-decoder"
repository = "https://github.com/h33p/ofps"
license = "MIT"
keywords = [ "ofps", "motion", "ffmpeg", "libav", "mpeg" ]
categories = [ "computer-vision", "science", "parsing", "algorithms" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ofps = { version = "0.1", path = "../ofps" }
nalgebra = "0.30"
ffmpeg-sys-next = "5"
libc = "0.2"
c_str_macro = "1"
log = "0.4"
