[package]
name = "camera-tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motion-vectors = { version = "0.1", path = "../motion-vectors" }
terminal_size = "0.1"
mvec-av = { version = "0.1", path = "../mvec-av" }
