[package]
name = "cv-decoder"
version = "0.1.0"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
description = "Detects frame motion using OpenCV"
documentation = "https://docs.rs/cv-decoder"
repository = "https://github.com/h33p/ofps"
license = "MIT"
keywords = [ "ofps", "motion", "video", "optical", "opencv" ]
categories = [ "computer-vision", "science", "algorithms" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ofps = { version = "0.1", path = "../ofps" }
nalgebra = "0.30"
libc = "0.2"
c_str_macro = "1"
log = "0.4"
opencv = { version = "0.62", features = ["clang-runtime"] }
