[package]
name = "libmv-estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ofps = { version = "0.1", path = "../ofps" }
nalgebra = "0.30"
rand = "0.8"
libmv = { path = "../libmv-rust" }
noisy_float = "0.2"
