[package]
name = "libmv"
version = "0.1.0"
edition = "2021"
links = "libmv-c"
description = "Opinionated Rust bindings for libmv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.59"
