[package]
name = "libmv"
version = "0.1.0"
edition = "2021"
links = "libmv-c"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
description = "Opinionated Rust bindings for libmv"
documentation = "https://docs.rs/libmv"
repository = "https://github.com/h33p/ofps"
license = "MIT"
keywords = [ "blender", "libmv" ]
categories = [ "computer-vision", "api-bindings" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.59"
