[package]
name = "motion-analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motion-vectors = { version = "0.1", path = "../motion-vectors" }
motion-loader = { version = "0.1", path = "../motion-loader" }
nalgebra = "0.30"
rayon = "1"
