[package]
name = "motion-vectors"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29"
ptrplus = { version = "1", path = "../ptrplus" }
bytemuck = { version = "1", features = [ "derive" ] }
