[package]
name = "multiview-estimator"
version = "0.1.0"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
description = "Estimates camera motion using OpenCV's multiple view geometry estimator"
documentation = "https://docs.rs/multiview-estimator"
repository = "https://github.com/h33p/ofps"
license = "MIT"
keywords = [ "ofps", "vision", "motion", "video", "opencv" ]
categories = [ "computer-vision", "science", "algorithms" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ofps = { version = "0.1", path = "../ofps" }
nalgebra = "0.30"
rand = "0.8"
opencv = { version = "0.62", features = ["clang-runtime"] }
noisy_float = "0.2"
