[package]
name = "ofps-suite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ofps = { version = "0.1", path = "../ofps" }
terminal_size = "0.1"
env_logger = "0.9"
log = "0.4"
nalgebra = "0.30"
anyhow = { version = "1", features = ["std"] }
wimrend = { version = "0.1", path = "../wimrend" }
pollster = "0.2"
rfd = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
itertools = "0.10"
rayon = "1"
once_cell = "1"

# wgpu dependencies
winit = "0.26"
wgpu = "0.12"
bytemuck = { version = "1", features = [ "derive" ] }

# egui
egui = "0.17"
epi = "0.17"
egui-winit = "0.17"
egui_wgpu_backend = "0.17"

