[package]
name = "ofps"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30"
ptrplus = { version = "1", path = "../ptrplus" }
bytemuck = { version = "1", features = [ "derive" ] }
rand = "0.8"
anyhow = { version = "1", features = ["std"] }
