[package]
name = "ptrplus"
version = "1.1.0"
description = "Additional funtionality for pointer types"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
repository = "https://github.com/tmccombs/ptrplus"
documentation = "https://docs.rs/ptrplus"
license = "MIT"
edition = "2018"

[features]

default = ["std"]

# Enable implmentations for types in the std crate
std = ["alloc"]

# Enable implemenations for types in the alloc crate
alloc = []
