[package]
name = "wimrend"
version = "0.1.1"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
description = "Wgpu Immediate Mode RENDerer"
documentation = "https://docs.rs/wimrend"
repository = "https://github.com/h33p/ofps"
license = "MIT"
keywords = [ "wgpu", "renderer" ]
categories = [ "rendering", "rendering::engine", "visualization" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nalgebra = "0.30"
image = "0.24"
winit = "0.26"
wgpu = "0.13"
bytemuck = { version = "1", features = [ "derive" ] }
anyhow = { version = "1", features = ["std"] }
once_cell = "1"
